--- a/frontend/public/netlify.toml
+++ b/frontend/public/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-    command = "npm start"
-    publish = "/build"
-    base = "/"
+command = "npm start"
+publish = "/build"
+base = "/frontend"
